@@ -194,6 +194,8 @@ Bug Fixes
 
 * SOLR-4949: UI Analysis page dropping characters from input box (steffkes)
 
+* SOLR-4960: race condition in shutdown of CoreContainer. (yonik)
+
 Optimizations
 ----------------------
 
